tests/variable/redefine_self.rev
var self = "value" // error: missing variable name after 'var' keyword in declaration